--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
   body {
-    scale:0.9;
+  transform: scale(0.9);
+  transform-origin: center; /* or center, depending on how you want it positioned */
+  /* optionally fix layout issues */
+  width: calc(100% / 0.9);
+  height: calc(100% / 0.9);
     margin: 0;
     overflow: hidden;
     background: #222;
@@ -31,5 +35,6 @@
     left: 100px;
     font-size:4em;
 }
+
 
 
