--- a/style.css
+++ b/style.css
@@ -21,15 +21,16 @@
 }
 
 #main {
-    position: absolute;
-    font-family: "Ubuntu", sans-serif;
-    color:white;
-    font-weight: 400;
-    font-style: normal;
-    text-align: center;
-    top:50px;
-    left: 50%;
-    transform: translateX(-50%);
-    font-size:4em;
+  font-family: "Ubuntu", sans-serif;
+  color: white;
+  font-weight: 400;
+  font-style: normal;
+  text-align: center;
+  margin: 50px auto;
+  width: 90%;
+  max-width: 800px;
+  font-size: 4em;
+  position: relative;
 }
+
 
